# pythonWebScrapper

./: .coverage  .env.example  .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yaml  dagger.py  docker-compose.yaml  docker-compose.yml  pyproject.toml
src/: config.py  db.py  models.py  scraper.py  utils.py
src/task/: analyze_data.py
src/tasks/: analyze_data.py  fetch_data.py
tests/: test_db.py  test_scraper.py  test_utils.py
