[tool.poetry]
name = "pythonwebscrapper"
version = "0.1.0"
description = "A web scraper for fetching product prices and storing them in a GraphQL database"
authors = ["mzlamal <milan.zlamal@ceskatelevize.cz>"]
license = "GNU, Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
graphene = "^3.3"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
