[tool.poetry]
name = "stock-scrapper"
version = "0.1.0"
description = "A stock scraper using Dagger.io"
authors = ["Necraatall <milan.zlamal.qa@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "stock_scrapper"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
mako = "^1.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.1"
ruff = "^0.4.4"
dagger-io = "^0.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
